# sample-agentic-form-filling

./: .dockerignore  .env.example  .env.website1  .env.website2  .env.website3  .env.website4  .env.website5  .env.website6  .gitignore  CHANGELOG.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  deploy_agentcore.py  invoke_agent.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
infra/: app.py  cdk-outputs.json  cdk.json
infra/stacks/: websites_stack.py
scripts/: create_agentcore_memory.py  explore_agentcore_memory.py  store_cloudfront_secret.py
src/: agent.py  agentcore_memory.py  agentcore_server.py  config.py  image_filtering_conversation_manager.py
src/enhanced_browser/: __init__.py  accessibility_tree.py  agent_core_browser.py  browser.py  cloudfront_signer.py  local_chromium_browser.py  models.py
test-websites/: README.md  deploy.sh  serve.py
test-websites/website1-airlines/: baggage.html  extras.html  index.html  review.html  seats.html  success.html
test-websites/website1-airlines/css/: style.css
test-websites/website2-seatmap/: baggage.html  index.html  review.html  seats.html  success.html
test-websites/website3-spa/: index.html
test-websites/website4-dialogs/: extras.html  index.html  passengers.html  review.html  seats.html  success.html
test-websites/website5-iframes/: bags.html  confirm.html  index.html  seat-frame.html  seats.html  success.html
test-websites/website6-popups/: baggage.html  index.html  passengers.html  review.html  seats.html  success.html
(+12 files in other folders)
